--- a/src/EPS/DemoBundle/Resources/views/Default/_testgridaction.html.twig
+++ b/src/EPS/DemoBundle/Resources/views/Default/_testgridaction.html.twig
@@ -1,1 +1,1 @@
-<a href="#" onclick="alert('{{ligne.name}}'); return false;">MyAction</a>
+<a href="#" onclick="alert('_testgridaction.html'); return false;">MyAction</a>
