--- a/src/NXC/SafeBundle/Resources/views/layout.html.twig
+++ b/src/NXC/SafeBundle/Resources/views/layout.html.twig
@@ -8,17 +8,17 @@
         <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/smoothness/jquery-ui.css" type="text/css" rel="stylesheet" />
         {% block stylesheets %}
             <!-- jQuery code -->
-            <link rel="stylesheet" href="{{ asset('bundles/sonatajquery/themes/flick/jquery-ui-1.8.16.custom.css') }}" type="text/css" media="all" />
+            <link rel="stylesheet" href="{{ asset('bundles/sonatajquery/themes/redmond/jquery-ui-1.9.2.custom.css') }}" type="text/css" media="all" />
             <link rel="stylesheet" href="{{ asset('bundles/yptjqgrid/css/ui.jqgrid.css') }}" type="text/css" media="all" />
             <!-- base application asset -->
         {% endblock %}
 
         {% block javascripts %}
-            <script src="{{ asset('bundles/sonatajquery/jquery-1.8.0.js') }}" type="text/javascript"></script>
-            <script src="{{ asset('bundles/sonatajquery/jquery-ui-1.8.23.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('bundles/sonatajquery/jquery-1.8.3.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('bundles/sonatajquery/jquery-ui-1.9.2.custom.js') }}" type="text/javascript"></script>
             <script src="{{ asset('bundles/sonatajquery/jquery-ui-i18n.js') }}" type="text/javascript"></script>
             <script src="{{ asset('bundles/yptjqgrid/js/i18n/grid.locale-en.js') }}" type="text/javascript"></script>
-            <script src="{{ asset('bundles/yptjqgrid/js/jquery.jqGrid.min.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('bundles/yptjqgrid/js/jquery.jqGrid.js') }}" type="text/javascript"></script>
         {% endblock %}
     </head>
     <body>
