--- a/src/NXC/SafeBundle/Resources/views/layout.html.twig
+++ b/src/NXC/SafeBundle/Resources/views/layout.html.twig
@@ -28,6 +28,11 @@
             <script src="{{ asset('bundles/yptjqgrid/js/grid.grouping.js') }}" type="text/javascript"></script>
             <script src="{{ asset('bundles/yptjqgrid/js/grid.custom.js') }}" type="text/javascript"></script>
             <script src="{{ asset('bundles/yptjqgrid/js/grid.filter.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('bundles/yptjqgrid/js/grid.tbltogrid.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('bundles/yptjqgrid/js/grid.import.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('bundles/yptjqgrid/js/grid.jqueryui.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('bundles/yptjqgrid/js/jquery.fmatter.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('bundles/yptjqgrid/js/JsonXml.js') }}" type="text/javascript"></script>
             <script src="{{ asset('bundles/nxcsafe/js/javascript-rsa-master/src/jsbn.js') }}" type="text/javascript"></script>
             <script src="{{ asset('bundles/nxcsafe/js/javascript-rsa-master/src/rsa.js') }}" type="text/javascript"></script>
             <script src="{{ asset('bundles/nxcsafe/js/javascript-rsa-master/src/sha1.js') }}" type="text/javascript"></script>
